syntax = "proto3";

package hi;

option go_package = "./hipb";

// 定义请求消息
message HelloRequest {
  string name = 1;
}

// 定义响应消息
message HelloReply {
  string message = 1;
}

// 定义 gRPC 服务
service Greeter {
  // 定义服务方法
  rpc SayHello (HelloRequest) returns (HelloReply);
}
